Remove unused instruct